Changed from GET to POST to enable a body parameter, can now take a list of taxid + specmen ids
